fixing mobile letter spacing on header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,7 +148,6 @@ hr {
 
 header h1 {
     font-size: 3rem;
-    letter-spacing: 4px;
     margin-bottom: .4em;
 }
 
@@ -235,5 +234,9 @@ nav li {}
         display: inline-block;
         width: max-content;
         margin-right: .125rem;
+    }
+
+    header h1 {
+        letter-spacing: 4px;
     }
 }
